--- a/activitycontent/build.gradle
+++ b/activitycontent/build.gradle
@@ -8,7 +8,7 @@ plugins {
 }
 
 group 'org.dsnp.activitycontent'
-version '1.0.0'
+version '1.1.0'
 
 repositories {
     mavenCentral()
@@ -17,7 +17,7 @@ repositories {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     api "com.google.code.gson:gson:2.8.9"
-    implementation 'org.web3j:core:5.0.0'
+    implementation 'org.bouncycastle:bcpkix-jdk15on:1.70'
 
     // Unit Testing
     testImplementation 'org.assertj:assertj-core:3.22.0'
@@ -68,7 +68,7 @@ publishing {
             customizePom(pom)
             groupId 'org.dsnp.activitycontent'
             artifactId 'activitycontent'
-            version '1.0.0'
+            version version
 
             from components.java
 
